# Coursework__5

./: README.md  database.ini  main.py  pyproject.toml
classes/: db_manager.py  hh_parser.py
utils/: config.py
