[tool.poetry]
name = "coursework-5"
version = "0.1.0"
description = "Курсовая работа№5. Работа с базами данных "
authors = ["asolo4150@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
